src/errors.txt
error1.c: In function ‘main’:
error1.c:5:13: error: expected ‘;’ before ‘}’ token
    5 |     return 0
      |             ^
      |             ;
    6 | }
      | ~            
